--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Lab1-2</string>
+    <string name="app_name">Lab1_2</string>
+    <string name="enter_text_hint">Введите текст</string>
+    <string name="default_text">Текст будет здесь</string>
+    <string name="update_button">Обновить</string>
 </resources>
